--- a/style.css
+++ b/style.css
@@ -36,3 +36,66 @@ body {
     justify-content: space-between;
 
 }
+
+.banner{
+    background-image: url("/imagens/bg-jelly-fish-para_outras_pags.png"); /*da pra usar tanto link quando o arquivo local dentro da máquina host*/
+    width: 100%;
+    height: 500px;
+    display: flex;
+}
+
+.banner-title{
+    margin: 0;
+    color: beige;
+    font-size: 27px;
+    align-items: center;
+}
+
+.banner .container{
+    width: 10%;
+    justify-content: flex-end;
+
+}
+
+.cards{
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    text-align: center;
+    gap: 100px;
+    padding: 5%;
+
+
+    background-color: rgb(213, 208, 208);
+    
+}
+
+.card img{
+    height: 100px;
+    width: 100px;
+
+}
+
+.card h2{
+    color: #d54d71;
+}
+
+.footer{
+    width: 100%;
+    height: 100px;
+    background-color: #32B9CD;
+    color: white;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.footer p{
+    margin: 0;
+
+}
+
+/*
+MARGIN: distandcia de uma casa até outra casa;
+Padding: distancia do seu sofá a outro elemento, ser algo mais reservado.
+
+*/
